--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "fast-cache",
+  "name": "fast-gaoming",
   "version": "0.0.1",
   "description": "My Blog!",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	"release": "webpack",
-	"example": "http-server -p 8880"
+    "release": "webpack",
+    "example": "http-server -p 8880"
   },
   "repository": {
     "type": "git",
@@ -29,5 +29,8 @@
     "babel-preset-latest": "^6.24.1",
     "webpack": "^4.7.0",
     "webpack-cli": "^2.1.2"
+  },
+  "dependencies": {
+    "user": "0.0.0"
   }
 }
